adds links on all stories

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -169,8 +169,10 @@
         <p></p>
         <p></p>
         <p>
-          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
-          networks that jump-start careers. Just ask this “SportsCenter” anchor.</p>
+          Build and <a href="https://red.msudenver.edu/2018/students-contribute-to-next-generation-satellite-manufacturing-and-operation.html">operate satellites</a> at an innovative aerospace company. <a
+            href="https://red.msudenver.edu/2019/beer-here.html">Make beer</a> at a legendary brewery. Produce an
+          <a href="https://red.msudenver.edu/2018/this-just-in-students-tv-job-a-dream-come-true.html">Emmy-winning newscast</a>. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
+          networks that jump-start careers. Just ask this <a href="https://red.msudenver.edu/2019/so-you-want-to-host-sportscenter.html">“SportsCenter” anchor</a>.</p>
         <p style="margin-bottom:20px; font-size:2rem;"> <strong>The possibilities are endless.</strong></p>
       </div>
       <div class="col-xs-12 col-md-6">
@@ -253,7 +255,9 @@
       </div>
       <div class="col-xs-12 col-md-6">
 
-        <p style="margin-top:5vh;">Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist. Our professors
+        <p style="margin-top:5vh;">Learn to fight crime from the former <a href="http://red.msudenver.edu/2019/fighting-crime-from-the-classroom.html">director of the NCIS</a>. Analyze graphic novels with the convention <a
+            href="https://red.msudenver.edu/2018/comic-consummate-pro.html">director of Denver’s Comic
+            Con</a>. Get bitten by the insect bug with a <a href="https://red.msudenver.edu/2019/summer-bites.html">renowned mosquito biologist</a>. Our professors
           are experts in their
           fields, but even better at passing on their expertise to students.</p>
       </div>
