updates vendor styles with Header and footer

--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
-   <title>MSU Denver - Vendor Layout</title>
-   <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
+  <title>MSU Denver - Vendor Layout</title>
+  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
 
 
 </head>
-    <body>
-        <!-- Global Header -->
+
+<body>
+  <!-- Global Header -->
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
-   <div class="navbar-fixed-top">
-         <div class="col-xs-12 col-md-6 col-md-push-6">
-           <a href="https://msudenver.edu">
-              <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
-           </a>
-         </div>
-         <div class="container">
-           <div class="col-xs-12 col-md-6 col-md-pull-6">
-              <h1>Site Name </h1>
-           </div>
+  <div class="navbar-fixed-top">
+    <div class="col-xs-12 col-md-6 col-md-push-6">
+      <a href="https://msudenver.edu">
+        <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
+      </a>
+    </div>
+    <div class="container">
+      <div class="col-xs-12 col-md-6 col-md-pull-6">
+        <h1>Site Name </h1>
+      </div>
 
-         </div>
-   </div>
+    </div>
+  </div>
 </header>
-
-
-          <div class="container">
+  <!-- *********************************  -->
+  <!--  HEADER ENDS HERE -->
+  <!-- *********************************  -->
+  <div class="container">
   <div class="col-xs-12">
     <h1>This is a Header 1</h1>
     <h2>This is a Header 2</h2>
@@ -39,60 +42,10 @@
   </div>
 </div>
 
-          <!-- <section class="admissionsHomepage admissionsHomepageResources">
-	<div class="container" style="padding-bottom: 10px;">
-		<div class="col-xs-12">
-			<h2 class="fancy"><span>Resources</span></h2>
-		</div>
-	</div>
-
-	<div class="resources-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/programs/" target="_blank">Academic Programs</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/visit/" target="_blank">Visit Us</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/student-types/" target="_blank">Admissions Requirements</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/cost/" target="_blank">Cost</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/counselor/" target="_blank">Meet an Admissions Counselor</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/residency/" target="_blank">Residency</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/campuslife/" target="_blank">Campus Life</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/requestinfo/" target="_blank">Request Information</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/forms/" target="_blank">Admissions Forms</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/parents/" target="_blank">Parents</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/events/academic/" target="_blank">Academic Calendar</a>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="https://msudenver.edu/admissions/contact/" target="_blank">Contact Us</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-</section>
- -->
-          
-        <footer>
+  <!-- *********************************  -->
+  <!--  START FOOTER -->
+  <!-- *********************************  -->
+  <footer>
     <section class="footer-container">
         <div class="container">
             <div class="col-xs-4 col-md-2">
@@ -111,10 +64,10 @@
     </section>
 </footer>
 
-        <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
-        <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+  <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+  <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
 
-    </body>
+</body>
 
 </html>
