--- a/development/terminalfour/src/html/1column-vendor.html
+++ b/development/terminalfour/src/html/1column-vendor.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
-   <title>MSU Denver - Vendor Layout</title>
-   <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
+  <title>MSU Denver - Vendor Layout</title>
+  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
 
 
 </head>
-    <body>
-        @@include('vendor-includes/header-vendor.html')
 
-          @@include('paragraph-styles.html')
-          <!-- @@include('admissionsHomepageIncludes/admissionsHomepageResources.html') -->
-          
-        @@include('vendor-includes/footer-vendor.html')
-        <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
-        <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+<body>
+  @@include('vendor-includes/header-vendor.html')
+  <!-- *********************************  -->
+  <!--  HEADER ENDS HERE -->
+  <!-- *********************************  -->
+  @@include('paragraph-styles.html')
+  <!-- *********************************  -->
+  <!--  START FOOTER -->
+  <!-- *********************************  -->
+  @@include('vendor-includes/footer-vendor.html')
+  <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+  <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
 
-    </body>
+</body>
 
 </html>
