--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -21,6 +21,9 @@
 
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" />
   <script src="https://kit.fontawesome.com/7d379a052d.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
@@ -77,9 +80,69 @@
 
 </head>
 
-<body>
 
-  <section class="introduction">
+<body style{position: relative;} data-spy="scroll" data-target="#navbar-possible" data-offset="150">
+  <nav id="navbar-possible" class="navbar navbar-fixed-top">
+  <h2>Are you ready to find your <span class='possible-word'>possible</span>?</h2>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+        <a class="nav-link" href="#reimagine-higher-education">Reimagine higher education</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#master-your-future">Master your future</a>
+    </li>
+    <!-- <li class="nav-item dropdown">
+      <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
+        <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+        <a class="dropdown-item" href="#master-your-future">Master your future</a>
+
+        <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
+        <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
+
+      </div>
+    </li> -->
+  </ul>
+</nav>
+
+
+<style>
+  .navbar {
+
+    top: 0px;
+
+    background-color: #00447c;
+    z-index: 999;
+
+    width: 100%;
+  }
+
+  .navbar>h2 {
+    margin: 15px 0;
+    color: #fff;
+  }
+
+  .navbar>p {
+    color: #fff;
+  }
+</style>
+
+<script type="text/javascript">
+$(document).ready(function() {
+  $(window).on("activate.bs.scrollspy", function(){
+    const current = $(".nav li.active").text()
+    console.log("this is " + current)
+
+  })
+})
+</script>
+
+  <div >
+    <section class="introduction">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12">
@@ -96,7 +159,7 @@
     </div>
   </div>
 </section>
-  <section class="blue-background" id="start" style="height:100vh;">
+    <section class="blue-background" id="start" style="height:100vh;">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-10 offset-md-1">
@@ -143,7 +206,7 @@
     </div>
   </div>
 </section>
-  <section id="improving-health-in-colorado" class="health-in-colorado">
+    <section id="improving-health-in-colorado" class="health-in-colorado">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-8 offset-md-5 well">
@@ -157,8 +220,9 @@
     </div>
   </div>
 </section>
-  <!--  -->
-  <section class="white-background-right-photo" id="reimagine-higher-education">
+  
+    <!--  -->
+    <section class="white-background-right-photo" id="reimagine-higher-education">
   <div class="container">
     <h2>What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
     <h3>
@@ -181,7 +245,7 @@
     </div>
   </div>
 </section>
-  <section id="master-your-future">
+    <section id="master-your-future">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -208,7 +272,7 @@
     </div>
   </div>
 </section>
-  <!-- <section id="on-the-front-lines-of-cybersecurity">
+    <!-- <section id="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -219,7 +283,7 @@
     </div>
   </div>
 </section> -->
-  <!-- <section id="brewing-innovation-in-hospitality">
+    <!-- <section id="brewing-innovation-in-hospitality">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -230,7 +294,7 @@
     </div>
   </div>
 </section> -->
-  <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
+    <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
   <div class="container">
     <div class="row">
       <div class="well col-xs-12">
@@ -243,7 +307,7 @@
     </div>
   </div>
 </section>
-  <section class="" id="learners-connect-with-leaders">
+    <section class="" id="learners-connect-with-leaders">
   <div class="container">
     <h2 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h2>
     <h3><i>
@@ -265,7 +329,7 @@
     </div>
   </div>
 </section>
-  <!-- <section id="operating-satelites-from-the-classroom">
+    <!-- <section id="operating-satelites-from-the-classroom">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -278,7 +342,7 @@
     </div>
   </div>
 </section> -->
-  <!-- <section id="multiply-your-roi">
+    <!-- <section id="multiply-your-roi">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -291,7 +355,7 @@
     </div>
   </div>
 </section> -->
-  <!-- <section id="saving-endangered-languages">
+    <!-- <section id="saving-endangered-languages">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -300,7 +364,7 @@
     </div>
   </div>
 </section> -->
-  <!-- <section class="white-background-right-photo">
+    <!-- <section class="white-background-right-photo">
   <div class="container">
     <h2 style="margin-bottom:30px;">white-background-right-photo<span class="possible-word">possible</span></h2>
     <div class="row">
@@ -314,7 +378,7 @@
     </div>
   </div>
 </section> -->
-  <!-- <section class="background-right-copy">
+    <!-- <section class="background-right-copy">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-md-7 offset-md-5 well">
@@ -331,7 +395,7 @@
     </div>
   </div>
 </section> -->
-  <!-- <section class="blue-background" id="start">
+    <!-- <section class="blue-background" id="start">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-8 offset-md-4">
@@ -344,7 +408,7 @@
   </div>
 </section> -->
 
-  <section class="possible-call-to-action">
+    <section class="possible-call-to-action">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 well">
@@ -366,27 +430,29 @@
 </section>
 
 
-  <div class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6 text-center">
-          <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 text-center">
+            <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
+          </div>
         </div>
-        <div class="col-sm-12 col-md-6">
-          <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
-        </div>
-      </div>
-      <div class="row justify-content-end">
-        <div class="col-sm-12 col-md-8 offset-col-md-4">
-          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
+        <div class="row justify-content-end">
+          <div class="col-sm-12 col-md-8 offset-col-md-4">
+            <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
+          </div>
         </div>
       </div>
     </div>
+    </div>
+    <script src="style-assets/lib/jquery/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script>
   </div>
-  </div>
-  <script src="style-assets/lib/jquery/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script>
+
 </body>
 
 
