removed old button, pushdown on intro now links to first item rather than start

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -42,7 +42,7 @@
 <body style{position: relative;} data-spy="scroll" data-target="#navbar-possible" data-offset="150">
   @@include('possible/dropdown-navbar.html')
 
-  <div >
+  <div id="possible-cards">
     @@include('possible/introduction.html')
     <!-- @@include('possible/start-your-possible.html') -->
     @@include('possible/improving-health-in-colorado.html')
