--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -152,7 +152,7 @@ $(window).on("activate.bs.scrollspy", function(){
 
 </script>
 
-  <div >
+  <div id="possible-cards">
     <section class="introduction" id="introduction">
   <div class="container">
     <div class="row">
@@ -165,7 +165,7 @@ $(window).on("activate.bs.scrollspy", function(){
       </div>
 
       <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
-        <a href="#start"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
+        <a href="#improving-health-in-colorado"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
       </div>
     </div>
   </div>
@@ -201,9 +201,9 @@ $(window).on("activate.bs.scrollspy", function(){
           <btn class="btn">Brewing innovation in hospitality</btn>
         </a> -->
 
-        <a href="#teaching-tomorrows-teachers">
+        <!-- <a href="#teaching-tomorrows-teachers">
           <btn class="btn col-xs-12 col-md-5">Teaching tomorrow’s teachers</btn>
-        </a>
+        </a> -->
         <!-- <a href="#operating-satelites-from-the-classroom">
           <btn class="btn">Operating satellites from the classroom</btn>
         </a> -->
