fixed '-->' text showing up near top of page

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -44,7 +44,6 @@
 
   <div id="possible-cards">
     @@include('possible/introduction.html')
-    <!-- @@include('possible/start-your-possible.html') -->
     @@include('possible/improving-health-in-colorado.html')
   
     <!-- @@include('possible/side-navigation.html') -->
@@ -62,6 +61,7 @@
     <!-- @@include('possible/blue-background.html') -->
 
     @@include('possible/call-to-action.html')
+  </div>
 
 
     <div class="footer">
@@ -81,11 +81,9 @@
         </div>
       </div>
     </div>
-    </div>
-    <script src="style-assets/lib/jquery/jquery.min.js"></script>
+    <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script>
-  </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script> -->
 
 </body>
 
