--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -170,53 +170,6 @@ $(window).on("activate.bs.scrollspy", function(){
     </div>
   </div>
 </section>
-    <!-- <section class="blue-background" id="start" style="height:100vh;">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-10 offset-md-1">
-        <h2>Are you ready to find your <span class="possible-word">possible</span> ?</h2>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-md-10 offset-md-1">
-        <a href="#improving-health-in-colorado">
-          <btn class="btn col-xs-12 col-md-5">Improving health in Colorado</btn>
-        </a>
-
-        <a href="#reimagine-higher-education">
-          <btn class="btn col-xs-12 col-md-5">Reimagine higher education</btn>
-        </a>
-        <a href="#learners-connect-with-leaders">
-          <btn class="btn col-xs-12 col-md-5">Learners connect with leaders</btn>
-        </a>
-        <a href="#master-your-future">
-          <btn class="btn col-xs-12 col-md-5">Master your future</btn>
-        </a>
-        <!-- <a href="#on-the-front-lines-of-cybersecurity">
-          <btn class="btn">On the front lines of cybersecurity</btn>
-        </a> -->
-        <!-- <a href="#brewing-innovation-in-hospitality">
-          <btn class="btn">Brewing innovation in hospitality</btn>
-        </a> -->
-
-        <!-- <a href="#teaching-tomorrows-teachers">
-          <btn class="btn col-xs-12 col-md-5">Teaching tomorrow’s teachers</btn>
-        </a> -->
-        <!-- <a href="#operating-satelites-from-the-classroom">
-          <btn class="btn">Operating satellites from the classroom</btn>
-        </a> -->
-        <!-- <a href="#multiply-your-roi">
-          <btn class="btn">Multiply your ROI</btn>
-        </a> -->
-        <!-- <a href="#saving-endangered-languages">
-          <btn class="btn">Saving endangered languages</btn>
-        </a> -->
-      </div>
-    </div>
-  </div>
-</section> -->
     <section id="improving-health-in-colorado" class="health-in-colorado">
   <div class="container">
     <div class="row">
@@ -439,6 +392,7 @@ $(window).on("activate.bs.scrollspy", function(){
     </div>
   </div>
 </section>
+  </div>
 
 
     <div class="footer">
@@ -458,11 +412,9 @@ $(window).on("activate.bs.scrollspy", function(){
         </div>
       </div>
     </div>
-    </div>
-    <script src="style-assets/lib/jquery/jquery.min.js"></script>
+    <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script>
-  </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script> -->
 
 </body>
 
