--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -108,7 +108,7 @@
                 <a class="dropdown-item" href="#master-your-future">Master your future</a>
                 <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
                 <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
-  
+
                 <a class="dropdown-item" href="#introduction" hidden>Top</a>
               </div>
             </li>
@@ -200,7 +200,7 @@
             href="https://red.msudenver.edu/2019/beer-here.html">Make beer</a> at a legendary brewery. Produce an
           <a href="https://red.msudenver.edu/2018/this-just-in-students-tv-job-a-dream-come-true.html">Emmy-winning newscast</a>. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
           networks that jump-start careers. Just ask this <a href="https://red.msudenver.edu/2019/so-you-want-to-host-sportscenter.html">“SportsCenter” anchor</a>.</p>
-        <p style="margin-bottom:20px; font-size:2rem;"> <strong>The possibilities are endless.</strong></p>
+        <h4>The possibilities are endless.</h4>
       </div>
       <div class="col-xs-12 col-md-6">
         <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
@@ -210,27 +210,27 @@
 </section>
     <section id="master-your-future">
   <div class="container">
+
+    <div class="col-xs-12">
+      <h2>Here, you can master your future.</h2>
+      <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
+    </div>
+
     <div class="row">
-      <div class="col-xs-12">
-        <h2>Here, you can master your future.</h2>
-        <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
-        <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <div class="copy-swap">
-              <p>Advance your community – and your career – with an <a href="https://www.msudenver.edu/graduate-studies/" advanced degree</a> in a critical Colorado field: <a
-                  href="https://www.msudenver.edu/programs/master-of-business-administration-mba.shtml">business administration</a>, <a href="https://www.msudenver.edu/programs/master-of-professional-accountancy-mpacc.shtml">accounting</a>, <a
-                  href="https://www.msudenver.edu/programs/master-of-arts-in-teaching-mat.shtml">teaching</a>, <a href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">cybersecurity</a>, <a
-                  href="https://www.msudenver.edu/programs/master-of-health-administration-mha.shtml">health administration</a>,
-                <a href="https://www.msudenver.edu/programs/master-of-science-in-human-nutrition-and-dietetics.shtml">human nutrition and dietetics</a>, <a href="https://www.msudenver.edu/programs/master-of-social-work-msw.shtml">social work</a> or
-                <a href="https://www.msudenver.edu/programs/ms-in-clinical-behavioral-health.shtml">clinical behavioral health</a>. Level up in your current job or change careers with a flexible and relevant <a
-                  href="https://red.msudenver.edu/2019/level-up.html">graduate degree designed with students in
-                  mind</a>.</p>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
-          </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="copy-swap">
+          <p>Advance your community – and your career – with an <a href="https://www.msudenver.edu/graduate-studies/" advanced degree</a> in a critical Colorado field: <a
+              href="https://www.msudenver.edu/programs/master-of-business-administration-mba.shtml">business administration</a>, <a href="https://www.msudenver.edu/programs/master-of-professional-accountancy-mpacc.shtml">accounting</a>, <a
+              href="https://www.msudenver.edu/programs/master-of-arts-in-teaching-mat.shtml">teaching</a>, <a href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">cybersecurity</a>, <a
+              href="https://www.msudenver.edu/programs/master-of-health-administration-mha.shtml">health administration</a>,
+            <a href="https://www.msudenver.edu/programs/master-of-science-in-human-nutrition-and-dietetics.shtml">human nutrition and dietetics</a>, <a href="https://www.msudenver.edu/programs/master-of-social-work-msw.shtml">social work</a> or
+            <a href="https://www.msudenver.edu/programs/ms-in-clinical-behavioral-health.shtml">clinical behavioral health</a>. Level up in your current job or change careers with a flexible and relevant <a
+              href="https://red.msudenver.edu/2019/level-up.html">graduate degree designed with students in
+              mind</a>.</p>
         </div>
+      </div>
+      <div class="col-xs-12 col-md-6 ">
+        <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
       </div>
     </div>
   </div>
