embedded video onto possible page

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -44,6 +44,7 @@
 
   <div id="possible-cards">
     @@include('possible/introduction.html')
+    @@include('possible/possible-movie.html')
     @@include('possible/improving-health-in-colorado.html')
   
     <!-- @@include('possible/side-navigation.html') -->
