removed padding on video, introduction push-down button now sends to video

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -99,7 +99,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
-        <a href="#improving-health-in-colorado"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
+        <a href="#possible-movie"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
       </div>
     </div>
   </div>
